# XDE-ISIRController

./: .gitignore  .gitmodules  README.md  setup.py
cpp/: CMakeLists.txt
cpp/include/: ISIRControllerThreadXDE.h  ScenarioLibrary.h  ScenariosRomeo.h  TaskSetICub.h  TaskSetRomeoBalance.h  orcXdeModel.h
cpp/include/dynamic_balance_3D/: balanceMPC.h  contactProperties.h  contactState.h  lmpcBase.h  mpcModelState.h  mpcTrajectoryGenerator.h  qcqpFppScaSolver.h
cpp/include/scenarios/: ScenarioLibrary.h
cpp/include/scenarios/icub/: ScenariosICub.h
cpp/include/scenarios/romeo/: ScenariosRomeo.h
cpp/include/sequences/: sequenceLibrary.h
cpp/include/sequences/icub/examples_basic/: 01_standing.h  02_squatting.h  03_dbal_standing.h
cpp/include/sequences/romeo/: sequencesRomeo.h
cpp/script/icub/: icub.py
cpp/script/romeo/: out  romeo.py
cpp/src/: CMakeLists.txt  ISIRControllerThreadXDE.cpp  ScenarioLibrary.cpp  ScenariosICub.cpp  ScenariosRomeo.cpp  TaskSetICub.cpp  TaskSetRomeoBalance.cpp  orcXdeModel.cpp
cpp/src/dynamic_balance_3D/: balanceMPC.cpp  contactProperties.cpp  contactState.cpp  lmpcBase.cpp  mpcModelState.cpp  mpcTrajectoryGenerator.cpp  qcqpFppScaSolver.cpp
cpp/src/scenarios/: ScenarioLibrary.cpp
cpp/src/scenarios/romeo/: ScenariosRomeo.cpp
cpp/src/sequences/: sequenceLibrary.cpp
cpp/src/sequences/icub/examples_basic/: 01_standing.cpp  02_squatting.cpp  03_dbal_standing.cpp
cpp/src/sequences/romeo/: sequencesRomeo.cpp
doc/: core_module.rst  task_controller_module.rst
examples/: 01_full_joint_control.py  02_partial_joint_control.py  03_cartesian_frame_control.py  04_CoM_control.py  05_torque_control.py  05_torque_control_2.py  06_force_control.py  09_contact_avoidance_constraint.py  11_taskmanager.py  observers.py
examples/icub_control/: 01_standing.py  02_squatting.py  03_zmp_standing.py  04_zmp_balancing.py  05_walking.py  05_walking_back.py  05_walking_side.py  06_sequence_of_walk.py  07_straffing.py  08_kneeling.py  09_walk_infinity.py  10_contact_force.py  11_real_zmp_observation.py  load_performances.py  observers.py
examples/isir_task_manager/: 01_isirtaskmanager.py  02_trajectory.py  fulljointcontrol1.xml
examples/isir_task_manager/resources/: fulljointcontrol2.xml  trajq7.txt
examples/orocos_communication/: 01_proxy_frame_control.py  02_proxy_CoM_control.py  02_remote_CoM_control.py
examples/resources/: sphere.xml
examples/walker_control/urdf/: walker.xml
python/: setup.py
python/doc/: conf.py  index.rst  walk_module.rst
python/examples/: 02_partial_joint_control.py  08_joint_limit_constraint.py  09_contact_avoidance_constraint_2.py  10_auto_collision.py
python/examples/icub_control/: 04_zmp_balancing.py  05_walking.py  07_straffing.py  08_kneeling.py  10_contact_force.py  11_real_zmp_observation.py
python/examples/kuka_control/: 03_cartesian_frame_control.py  05_torque_control_2.py  06_force_control.py  07_torque_constraint.py
python/examples/orocos_communication/: 01_remote_frame_control.py  runcorbaserver.sh
python/examples/resources/: Robot3T.xml  moving_wall.xml
python/examples/romeo_control/: romeo_basic.py  romeo_walk.py
python/examples/walker_control/: walker_walking.py
python/src/: contact.py  observers.py  performances.py  task_controller.py  walk.py  zmpy_python.py
src/: __init__.py  corba.py  core.py  model.py  observers.py  performances.py  task_controller.py  task_gui.py  walk.py  xic_config.py
